[WGSL] shader,execution,expression,constructor,non_zero:* is failing https://bugs.webkit.org/show_bug.cgi?id=274319 rdar://128283127

Reviewed by Mike Wyrzykowski.

There were 2 issues:
- A metal compilation failure when assigning an array of packed vectors to an
  array of unpacked vectors
- array<vec3<T>> needs to be converted to array<S>, where S is a struct with the
  packed vec3<T> and explicit padding

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::pack):
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::emitNecessaryHelpers):
(WGSL::Metal::FunctionDefinitionWriter::generatePackingHelpers):
(WGSL::Metal::FunctionDefinitionWriter::visit):
* Source/WebGPU/WGSL/Types.cpp:
(WGSL::Type::packing const):
* Source/WebGPU/WGSL/Types.h:
* Source/WebGPU/WGSL/WGSLShaderModule.h:
(WGSL::ShaderModule::usesPackedVec3 const):
(WGSL::ShaderModule::setUsesPackedVec3):
(WGSL::ShaderModule::clearUsesPackedVec3):

Canonical link: https://commits.webkit.org/278991@main