Source/WebGPU/WGSL/Types.h
@@ -46,9 +46,11 @@ enum Packing : uint8_t {
     Either       = Packed | Unpacked,
 
     PStruct = 1 << 2,
-    Vec3   = 1 << 3,
+    PArray = 1 << 3,
+    Vec3   = 1 << 4,
 
     PackedStruct = Packed | PStruct,
+    PackedArray = Packed | PArray,
     PackedVec3   = Packed | Vec3,
 };
 
